@@ -10,6 +10,9 @@ using namespace edelib;
 
 UT_FUNC(XDGPathTest, "Test XDG paths")
 {
+	puts(" *** XDGPathTest mess with some environment variables that are probably");
+	puts(" *** used by the current environment. Maybe strange things can be occured later");
+
 	UT_VERIFY( STR_EQUAL(user_config_dir(), "~/.config/ede") );
 	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share/ede") );
 	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache/ede") );
@@ -64,4 +67,40 @@ UT_FUNC(XDGPathTest, "Test XDG paths")
 	setenv("EDE_CACHE_HOME", "/home/foo", 1);
 	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo/ede") );
 	unsetenv("EDE_CACHE_HOME");
+
+	vector<String> lst;
+	setenv("XDG_DATA_DIRS", "/home/foo:/home/baz:/home/taz", 1);
+	int ret = system_data_dirs(lst);
+
+	UT_VERIFY(ret == 3);
+	UT_VERIFY(lst[0] == "/home/foo");
+	UT_VERIFY(lst[1] == "/home/baz");
+	UT_VERIFY(lst[2] == "/home/taz");
+
+	unsetenv("XDG_DATA_DIRS");
+	lst.clear();
+
+	// in case of empty XDG_DATA_DIRS
+	ret = system_data_dirs(lst);
+	UT_VERIFY( ret == 2 );
+	UT_VERIFY( lst[0] == "/usr/local/share" );
+	UT_VERIFY( lst[1] == "/usr/share" );
+
+	lst.clear();
+
+	setenv("XDG_CONFIG_DIRS", "/etc/myconf:/etc/yourconf:/usr/local/share/conf:/some/path/conf", 1);
+	ret = system_config_dirs(lst);
+	UT_VERIFY( ret == 4 );
+	UT_VERIFY( lst[0] == "/etc/myconf" );
+	UT_VERIFY( lst[1] == "/etc/yourconf" );
+	UT_VERIFY( lst[2] == "/usr/local/share/conf" );
+	UT_VERIFY( lst[3] == "/some/path/conf" );
+
+	unsetenv("XDG_CONFIG_DIRS");
+	lst.clear();
+
+	// in case of empty XDG_CONFIG_DIRS
+	ret = system_config_dirs(lst);
+	UT_VERIFY( ret == 1 );
+	UT_VERIFY( lst[0] == "/etc/xdg" );
 }
